--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "express-node-app",
   "version": "1.0.0",
-  "description": "A fullstack application using node and express",
+  "description": "",
   "main": "index.js",
-  "engines": {
-    "node":"8.5.0",
-    "npm":"5.3.0"
-  },
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "Nithin Thampi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "cookie-session": "^1.3.1",
+    "express": "^4.15.4",
+    "mongoose": "^4.11.12",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
